[gd_scene load_steps=4 format=3 uid="uid://cuechsdt8ob0m"]

[ext_resource type="PackedScene" uid="uid://blewrwab77dq3" path="res://Models/Environment/Shield.blend" id="1_3l4nu"]
[ext_resource type="Script" uid="uid://bqifa05idvyuj" path="res://Prefabs/Shield.gd" id="2_34unw"]

[sub_resource type="Curve" id="Curve_34unw"]
_limits = [0.0, 1.5, 0.0, 1.0]
_data = [Vector2(0, 0), 0.0, 6.29729, 0, 0, Vector2(0.15903, 0.926471), 3.79963, 3.79963, 0, 0, Vector2(1, 1), -3.33498, 0.0, 0, 0]
point_count = 3

[node name="Shield" instance=ExtResource("1_3l4nu")]
script = ExtResource("2_34unw")
curve = SubResource("Curve_34unw")

[node name="Chain_0" parent="." index="0"]
transform = Transform3D(0.369284, 0, 0, 0, 0.369284, 0.00031054, 0, -0.00031054, 0.369284, 0.00454826, 0.00581809, -1.2968)

[node name="Chain_1" parent="Chain_0" index="0"]
transform = Transform3D(1, 0, 0, 0, 0.999998, 0.00126138, 0, -0.00126138, 0.999998, -0.00757694, -0.00581186, 0.712115)

[node name="Chain_2" parent="Chain_0/Chain_1" index="0"]
transform = Transform3D(1, 0, 0, 0, 0.999999, 0.00168185, 0, -0.00168185, 0.999999, 0, -0.00568961, 0.195105)

[node name="Chain_3" parent="Chain_0/Chain_1/Chain_2" index="0"]
transform = Transform3D(0.999996, 0.00252277, -6.95461e-11, -0.00252276, 0.999994, 0.00210231, 5.3037e-06, -0.0021023, 0.999997, 0, 0, 0.436437)

[node name="Shield" parent="Chain_0/Chain_1/Chain_2/Chain_3" index="0"]
transform = Transform3D(2.70799, 0.00683337, -0.000683165, -0.00683164, 2.70798, 0.00683166, 0.0007004, -0.0068299, 2.70799, 0.0136763, -0.0172326, 0.316601)
